# sparrow

./: Pipfile  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
test/: tests.py
